Added flag support for pretty printing, defaulting to non-pretty